AUX_SOURCE_DIRECTORY(. DIR_SRCS)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

SET(LIB_DIR /home/inson/EsunnyV10_My/lib)

LINK_DIRECTORIES(${LIB_DIR})

SET(SRC_LIST main.cpp)

ADD_EXECUTABLE(esunny ${SRC_LIST} ${DIR_SRCS})

INCLUDE_DIRECTORIES(.)

TARGET_LINK_LIBRARIES(esunny dstartradeapi)
TARGET_LINK_LIBRARIES(esunny TapQuoteAPI)

